load("@io_bazel_rules_go//go:def.bzl", "gazelle", "go_library", "go_prefix", "go_test")

go_prefix("github.com/kevinburke/ssh_config")

gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "lexer.go",
        "parser.go",
        "position.go",
        "token.go",
        "validators.go",
    ],
    visibility = ["//visibility:public"],
    deps = ["@com_github_pelletier_go_buffruneio//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "config_test.go",
        "validators_test.go",
    ],
    data = glob(["testdata/**"]),
    library = ":go_default_library",
    timeout = "short",
)

go_test(
    name = "go_default_xtest",
    srcs = ["example_test.go"],
    data = glob(["testdata/**"]),
    deps = ["//:go_default_library"],
    timeout = "short",
)
